--- a/Proyecto_Final/css/styles.css
+++ b/Proyecto_Final/css/styles.css
@@ -12,11 +12,14 @@
 .alerta{
     width: 100vw;
     text-align: center;
+    margin-bottom: 0;
     vertical-align: middle;
 }
 
 .header{
-    min-height: 9vh;
+    min-height: 3.5rem;
+    max-height: min-content;
+    height: min-content;
     max-width: 100vw;
     background-color: rgb(153, 148, 148);
     padding: 0px;
@@ -64,9 +67,13 @@
     text-align: center;
 }
 
-#contendedorCarrito{
-    margin-bottom: 2rem;
+.main__contenedor__bannerPrincipal{
+    max-width: 100%;
+    height: auto;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
+
 
 .main__contenedor__menu{
     margin-top: 1.5rem;
@@ -90,7 +97,7 @@
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
     font-size: 1.5rem;
-    margin-bottom: 2rem;
+    margin-bottom: 1.25rem;
     padding: .125rem .75rem;
 }
 
@@ -117,7 +124,7 @@
 }
 
 .footer__contenedor{
-    background-color: rgb(36, 33, 37);
+    background-color: rgb(33, 37, 41);
     color: white;
     font-size: 1rem;
     padding: 0px;
@@ -130,3 +137,10 @@
 .footer__contenedor p{
     margin: 0px;
 }
+
+/*
+@media (max-width: 575.98px)
+{
+
+}
+*/
