--- a/Proyecto_Final/css/styles.css
+++ b/Proyecto_Final/css/styles.css
@@ -14,6 +14,8 @@
     text-align: center;
     margin-bottom: 0;
     vertical-align: middle;
+    padding-left: 0;
+    padding-right: 0;
 }
 
 .header{
@@ -138,9 +140,49 @@
     margin: 0px;
 }
 
-/*
-@media (max-width: 575.98px)
-{
+/*************************************** HOVER **************************************/
 
+/* Underline From Left */
+.hvr-underline-from-left {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    position: relative;
+    overflow: hidden;
+  }
+  .hvr-underline-from-left:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    left: 0;
+    right: 100%;
+    bottom: 0;
+    background: #fff;
+    height: 2px;
+    -webkit-transition-property: right;
+    transition-property: right;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-timing-function: ease-out;
+    transition-timing-function: ease-out;
+  }
+  .hvr-underline-from-left:hover:before, .hvr-underline-from-left:focus:before, .hvr-underline-from-left:active:before {
+    right: 0;
+  }
+
+/*********************************************************************/
+
+@media (max-width: 374.98px)
+{
+    .alerta{
+        padding-right: 2rem;
+        padding-top: 1.5rem;
+        padding-bottom: 1.5rem;
+    }
+
+    button.btn-close{
+        height: 1.75rem;
+    }
 }
-*/
